# esolangs

./: .bazelignore  .bazelrc  .gitignore  BUILD  LICENSE.md  MODULE.bazel  README.md  WORKSPACE  extensions.bzl  repositories.bzl
bfjoust/site/: BUILD  breakdown.html  game.html  index.html  internals.html  matrix.html  scores.html  site.bzl  vis.html
bfjoust/site/js/: breakdown.js  matrix.js  scores.js
bfjoust/site/js/egojsout/: egojsout.js
bfjoust/site/scss/: main.scss
bfjoust/site/template/: data.html  default.html  mathjax.html  plot.html  plot_tape.html
bfjoust/site/vis/: cycles.html  tape_abs.html  tape_heat.html  wins.html
bfjoust/site/vis/js/: cycles.js  plot_prog.js  plot_tape.js  wins.js
esobot/: BUILD  bridge.cc  bridge.h  config.proto  esobot.cc  log.proto  logger.cc  logger.h  plugins.cc  rcfeed.cc  rcfeed.h
esogem/client/: BUILD  main.cc
esogem/docs/: design.md
esogem/model/: CMakeLists.txt  main.cc  model.proto
esogem/server/: .gitignore  go.mod  go.sum  server.go
esogem/server/api/: api.go  api_test.go
esogem/server/api/testdata/: update.sh
esogem/server/cmd/fakemodel/: main.go
esogem/server/cmd/generate/: main.go
esogem/server/cmd/logcat/: main.go
esogem/server/flow/: flow.go
esogem/server/model/: model.go
esogem/server/proto/: api.pb.go  config.pb.go  config.proto  generate.go  log.pb.go  log.proto  model.pb.go  model.proto
esogem/server/proto/delim/: delim.go
esogem/server/wiki/: text.go  wiki.go  wiki_test.go
esogem/server/wiki/testdata/: get.json  get.txt  search.text.json  search.title.json  update.sh
esologs/: BUILD  compress.sh  config.proto  esologs.cc  format.cc  format.h  index.cc  index.h  log.proto  logcat.cc  server.cc  server.h  server_test.cc  stalker.cc  stalker.h  writer.cc  writer.h
esologs/backfill/: backfill-codu.py  backfill-psql.py
esologs/web/: index.css  index.html  log.css  main.css  stalker.js
testdata/: BUILD  esologs.config
testdata/golden/: esologs.2020.html  esologs.2021-01-01-raw.txt  esologs.2021-01-01.html  esologs.2021-01-01.txt  esologs.2021-01.html  esologs.index.html  update.sh
testdata/logs/2020/12/: 29.pb.br  30.pb.br  31.pb.br
testdata/logs/2021/1/: 1.pb.br  2.pb  3.pb
tools/: BUILD.hinnant_date  bazel.rc  com_github_yhirose_cpp_httplib.BUILD  hinnant_date.BUILD
web/: BUILD  request.h  response.h  server.cc  server.h  websocket.h  writer.cc  writer.h
webgen/: BUILD  archive.py  closure.bzl  erb.rb  preview.py  preview_stub.py  webgen.bzl
