module(
    name = "esolangs",
    version = "0.0.1",
)

bazel_dep(name = "bracket", version = "0.0.1")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "protobuf", version = "21.7")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "re2", version = "2023-11-01")

# bracket is not in any repository, so it's up to you to get a copy
local_path_override(module_name = "bracket", path = "../bracket")

bracket_non_module_dependencies = use_extension("@bracket//:extensions.bzl", "non_module_dependencies")
use_repo(
    bracket_non_module_dependencies,
    "civetweb",
    "hedron_compile_commands",
    "hinnant_date",
    prometheus_cpp = "com_github_jupp0r_prometheus_cpp",
)

esolangs_non_module_dependencies = use_extension("@esolangs//:extensions.bzl", "non_module_dependencies")
use_repo(
    esolangs_non_module_dependencies,
    "closure_compiler_prebuilt",
    cpp_httplib = "com_github_yhirose_cpp_httplib",
)
